# mkshelldoc

./: .env  .gitignore  README.md  dot.local  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
docs/: 404.html  index.html  sitemap.xml
docs/cod/: index.html
docs/search/: search_index.json
mkdocs/: api.md
mkshelldoc/: __init__.py  __main__.py  cli.py  formatter.py  mkshelldoc.py  parser.py
src/mkshelldoc_serdigital64.egg-info/: PKG-INFO  SOURCES.txt
test/: test_mkshelldoc.py
tests/: __init__.py  test_mkshelldoc.py
tests/samples/: shell.sh
