[metadata]
name = mkshelldoc-serdigital64
version = 0.0.1
author = SerDigital64
author_email = serdigital64@gmail.com
description = Documentation generator for shell scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://serdigital64.github.io/mkshelldoc
project_urls =
    Source = https://serdigital64.github.io/mkshelldoc
    Bug Tracker = https://serdigital64.github.io/mkshelldoc/issues
    Documentation = https://github.com/serdigital64/mkshelldoc
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Operating System :: OS Independent
    License :: OSI Approved :: GPLv3
license_file = LICENSE
license = GPLv3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9


[options.packages.find]
where = src
